--- a/app-to-phone-java/app-to-phone/app/src/main/res/values/strings.xml
+++ b/app-to-phone-java/app-to-phone/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">client-sdk-android-tutorial-voice-app-to-phone-java</string>
+    <string name="app_name">app-to-phone</string>
 </resources>
