Update code samples

--- a/in-app-messaging-java/app/src/main/res/values/strings.xml
+++ b/in-app-messaging-java/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">client-sdk-android-tutorial-messaging-java</string>
+    <string name="app_name">in-app-messaging</string>
 </resources>
